--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,14 @@ find_package(catkin REQUIRED COMPONENTS
   rospy
   geometry_msgs
   tf
+  moveit_core
+  moveit_msgs
+  moveit_planners_ompl
+  moveit_ros_move_group
+  moveit_ros_planning_interface
+  moveit_ros_visualization
+  moveit_visual_tools
+  rviz_visual_tools
 )
 
 ## System dependencies are found with CMake's conventions
@@ -106,7 +114,7 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES push_vs_grasp
-   CATKIN_DEPENDS gazebo_msgs rospy geometry_msgs tf
+   CATKIN_DEPENDS gazebo_msgs rospy geometry_msgs tf moveit_core moveit_ros_move_group
 #  DEPENDS system_lib
 )
 
@@ -134,7 +142,7 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-# add_executable(${PROJECT_NAME}_node src/push_vs_grasp_node.cpp)
+add_executable(moveit_test src/moveit_test.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -147,9 +155,9 @@ include_directories(
 # add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
-# target_link_libraries(${PROJECT_NAME}_node
-#   ${catkin_LIBRARIES}
-# )
+target_link_libraries(moveit_test
+   ${catkin_LIBRARIES}
+ )
 
 #############
 ## Install ##
