--- a/package.xml
+++ b/package.xml
@@ -60,6 +60,8 @@
   <build_depend>moveit_ros_move_group</build_depend>
   <build_depend>moveit_ros_planning_interface</build_depend>
   <build_depend>moveit_ros_visualization</build_depend>
+  <build_depend>actionlib</build_depend>
+  <build_depend>actionlib_msgs</build_depend>
   <build_export_depend>gazebo</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>moveit_core</build_export_depend>
@@ -79,7 +81,8 @@
   <exec_depend>rospy</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>tf</exec_depend>
-
+  <exec_depend>actionlib</exec_depend>
+  <exec_depend>actionlib_msgs</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
