pick and place planner implemented (bug in placement pose TODO)

--- a/Box2D/CMakeLists.txt
+++ b/Box2D/CMakeLists.txt
@@ -22,7 +22,7 @@ add_subdirectory(Box2D)
 
 if(BOX2D_BUILD_EXAMPLES)
   # HelloWorld console example.
-  add_subdirectory(HelloWorld)
+  #add_subdirectory(HelloWorld)
 
   # Testbed and dependencies.
   find_package(OpenGL REQUIRED)
