generating cylinders in sim. need to adjust for real

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,6 +85,7 @@ add_action_files(
   FILES
   PickPlace.action
   Plan.action
+  GenerateCylinders.action
 )
 
 ## Generate added messages and services with any dependencies listed here
