--- a/package.xml
+++ b/package.xml
@@ -87,6 +87,8 @@
   <exec_depend>actionlib</exec_depend>
   <exec_depend>actionlib_msgs</exec_depend>
   <exec_depend>robotiq_2f_gripper_control</exec_depend>
+   <build_depend>cv_bridge</build_depend>
+  <exec_depend>cv_bridge</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
