Changed to use deep sets

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,10 +58,10 @@ find_package(OpenCV REQUIRED core imgproc highgui)
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
-## add_message_files(
-##   FILES
-##   push_action.msg
-##)
+add_message_files(
+   FILES
+   object.msg
+)
 
 add_service_files(
   FILES
